fixed header covering contents to not to cover

--- a/src/routes/header/header.component.scss
+++ b/src/routes/header/header.component.scss
@@ -4,8 +4,8 @@ $basic-pink: #f48c8a;
 $background: #fbfcff;
 
 nav {
-  position: fixed;
-  top: 0;
+  // position: fixed;
+  // top: 0;
   z-index: 10;
   width: 100%;
 }
